--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
     "version": "0.1.0",
     "description": "Getting started with webpack and ES6 modules",
     "scripts": {
-        "start": "npm run webpack",
-        "webpack": "webpack -d --watch"
+        "watch": "webpack --watch",
+        "build": "webpack"
     },
     "license": "MIT",
     "dependencies": {
-        "webpack": "^3.0.0"
+        "pixi.js": "^5.1.0"
+    },
+    "devDependencies": {
+        "clean-webpack-plugin": "^3.0.0",
+        "html-webpack-plugin": "^3.2.0",
+        "webpack": "^3.12.0",
+        "webpack-cli": "^3.3.6"
     }
 }
